<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.v7.widget.CardView
            android:layout_width="398dp"
            android:layout_height="575dp" tools:layout_editor_absoluteY="20dp" tools:layout_editor_absoluteX="6dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/productName"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_width="73dp"
                    android:layout_height="25dp" android:id="@+id/prodName"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <EditText
                    android:layout_width="133dp"
                    android:layout_height="38dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText2" android:hint="@string/enterName" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/prodName" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/prodPurchPrice"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_width="148dp"
                    android:layout_height="25dp"
                    android:id="@+id/textView6" android:textSize="20dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText2"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    android:layout_width="184dp"
                    android:layout_height="41dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/purchPriceField" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:hint="@string/enterPurchPrice"/>
            <TextView
                    android:text="@string/prodMatCost"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:layout_width="195dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView7" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/purchPriceField"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
            <EditText
                    android:layout_width="218dp"
                    android:layout_height="44dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/matCostField" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:hint="@string/enterMatCost"/>
            <TextView
                    android:text="@string/prodLabCharge"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_width="161dp"
                    android:layout_height="38dp"
                    android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/matCostField"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>